Add query filter for tasks
